--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -40,7 +40,7 @@
 				<form class="login100-form validate-form" role="from">
 								<div ><a class="ind" href="index.html">Back to home</a></div><br>
 					<span class="login100-form-title p-b-26">
-						Welcome, Student Registration Page
+						Welcome, Registration Page
 					</span>
 					<span align="center" ><h3 style="color: red">{{message}}</h3></span>
 <!-- 					<span align="center" ><h3 style="color: red">{{message}}</h3></span>
