--- a/src/main/webapp/teacherdash.html
+++ b/src/main/webapp/teacherdash.html
@@ -24,6 +24,10 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
+
+
+		<script src="angjs/angular.min.js"></script>
+		<script src="angjs/angularapp.js"></script>
 </head>
 
 <body ng-app='prepup' ng-controller='TeacherDash' class="fix-header card-no-border">
@@ -45,7 +49,7 @@
                 <!-- Logo -->
                 <!-- ============================================================== -->
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="teacherDash">
+                    <a class="navbar-brand" href="teacherdash.html">
                         <!-- Logo icon --><b>
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                             <!-- Dark Logo icon -->
@@ -88,8 +92,8 @@
                                     <li>
                                         <div class="dw-user-box"><center>
                                             <div class="u-img"><img src="assets/images/users/1.jpg" alt="user"></div>
-                                            <div class="u-text">
-                                                <h3>{{kkk}}</h3>
+                                            <div class="u-text" ng-controller='ViewUser'>
+                                                <h3>{{user}}</h3>
                                                 <p>Teacher </p>
 <!--                                                 <p class="text-muted">Prep-Up</p> -->
                                         </div></center>
@@ -98,29 +102,17 @@
                                     <li role="separator" class="divider"></li>
                                     <li><a href="update_teach.html"><i class="ti-pencil-alt"></i>  Update Profile</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="changepass_teach"><i class="ti-settings"></i>  Change password</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    
+                                    <li><a href="changepass_teach.html"><i class="ti-settings"></i>  Change password</a></li>
+                                    <li role="separator" class="divider"></li>                                    
                                     <li><a href="#" alt="default" data-toggle="modal" data-target="#verticalcenter" ><i class="fa fa-power-off"></i> Logout</a></li>
                                 </ul>
                             </div>
-
-
-
-
-
-
-                        </li>
+						</li>
                     </ul>
                 </div>
             </nav>
         </header>
-        <!-- ============================================================== -->
-        <!-- End Topbar header -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
-        <!-- Left Sidebar - style you can find in sidebar.scss  -->
-        <!-- ============================================================== -->
+
         <aside class="left-sidebar">
             <!-- Sidebar scroll-->
             <div class="scroll-sidebar">
@@ -132,8 +124,8 @@
 
                     </div>
                     <!-- User profile text-->
-                    <div class="profile-text">
-                    <h3>{{temp.fname}}</h3>
+                    <div ng-controller='ViewUser' class="profile-text">
+                    <h3>{{user}}</h3>
                         <h5>Teacher</h5>
            
                     </div>
@@ -144,7 +136,7 @@
                     <ul id="sidebarnav">
                         <li class="nav-devider"></li>
 
-                        <li> <a class=" waves-effect waves-dark" href="teacherDash" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Home </span></a>
+                        <li> <a class=" waves-effect waves-dark" href="teacherdash.html" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Home </span></a>
                         </li>
                         <li> <a class=" waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-account-plus"></i><span class="hide-menu">Create Class </span></a>
                         </li>
@@ -177,7 +169,7 @@
                 </div>
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="teacherDash">Home</a></li>
+                        <li class="breadcrumb-item"><a href="teacherdash.html">Home</a></li>
                     </ol>
                 </div>
 
@@ -196,10 +188,6 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
-
-
-
-
                                 <div id="verticalcenter" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="vcenter" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered">
                                         <div class="modal-content">
