Class Creation Angular Done

--- a/src/main/webapp/changepass_stud.html
+++ b/src/main/webapp/changepass_stud.html
@@ -102,7 +102,7 @@
                                     <li role="separator" class="divider"></li>
                                     <li><a href="update_stud.html"><i class="ti-pencil-alt"></i>  Update Profile</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="chnagepass_stud.html"><i class="ti-settings"></i>  Change password</a></li>
+                                    <li><a href="changepass_stud.html"><i class="ti-settings"></i>  Change password</a></li>
                                     <li role="separator" class="divider"></li>
                                     
                                     <li><a href="#" alt="default" data-toggle="modal" data-target="#verticalcenter" ><i class="fa fa-power-off"></i> Logout</a></li>
