--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -43,6 +43,7 @@
 						Welcome, Registration Page
 					</span>
 					<span align="center" ><h3 style="color: red">{{message}}</h3></span>
+					<span align="center" ><h3 style="color: green">{{message1}}</h3></span>
 <!-- 					<span align="center" ><h3 style="color: red">{{message}}</h3></span>
 					<span align="center" ><h3 style="color: green">{{messagesuccess}}</h3></span> -->
                     <div class="wrap-input100 validate-input" data-validate = "Enter Character Only">
@@ -94,7 +95,7 @@
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button ng-click="postData()" [disabled]="!form.valid" class="login100-form-btn">
+							<button ng-click="postData()"  class="login100-form-btn">
 								Register
 							</button>
 						</div>
