--- a/src/main/webapp/teacherdash.html
+++ b/src/main/webapp/teacherdash.html
@@ -146,7 +146,7 @@
                         <li> <a class=" waves-effect waves-dark" href="#" data-toggle="modal" data-target="#exampleModal" aria-expanded="false"><i class="mdi mdi-account-plus"></i><span class="hide-menu">Create Class </span></a>
                         </li>
 
-                        <li> <a class=" waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-account-search"></i><span class="hide-menu">View Classes</span></a>
+                        <li  > <a href="teacherclasses.html" class=" waves-effect waves-dark"  aria-expanded="false"><i class="mdi mdi-account-search"></i><span class="hide-menu">View Classes</span></a>
                         </li>
                         
                         <li> <a class=" waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-book-open"></i><span class="hide-menu">Results</span></a>
@@ -241,7 +241,7 @@
                                                    <center> </div >
                                                    <div>
                                                    
-                                                <button type="submit" id="submit" ng-disabled="myForm.$invalid" class="btn btn-primary">Join Class</button>
+                                                <button type="submit" id="submit" ng-disabled="myForm.$invalid" class="btn btn-primary">Create Class</button>
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                 </div> 
                                                   </center>
