--- a/src/main/webapp/update_teach.html
+++ b/src/main/webapp/update_teach.html
@@ -314,7 +314,7 @@
                                                 <div class="form-group row">
                                                     <label class="control-label text-right col-md-3 required">Phone Number</label>
                                                     <div class="col-md-9">
-                                                        <input type="number" path="phone" name="phone" ng-value="phone" ng-model="phone"   id="phone" maxlength="10"   class="form-control"  required="true" >
+                                                        <input type="number" path="phone" id="phone" name="phone" ng-value="phone" ng-model="phone"   id="phone" maxlength="10"   class="form-control"  required="true" >
                                                     </div>
                                                 </div>
                                             </div>
@@ -437,6 +437,13 @@
 		location.replace("login.html");
 		});
 	}
+    $(document).ready(function() {
+        $(document.getElementById("phone")).attr({
+           "maxlength" : 10,        // substitute your own
+           "minlength" : 10,
+           "min": 4444444444   // values (or variables) here
+        });
+    });
 </script>
 </body>
 </html>
